--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
           
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -38,7 +37,7 @@ jobs:
           static_site_generator: nuxt
           
       - name: Install dependencies
-        run: npm ci
+        run: npm install
         
       - name: Build with Nuxt
         run: npm run build
