--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,10 +42,10 @@ jobs:
       - name: Install dependencies
         run: |
           npm install
-        
-      - name: Build with Nuxt
-        run: npm run build
-        
+
+      - name: Generate static site with Nuxt
+        run: npm run generate
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
